# Benchmarking_SLAM

./: README.md  logging.py
Motor_driver_code/: Motor_driver_code.ino
src_laptop/gbot_core/gbot_core/: README.md  package.xml
src_laptop/my_lidar_pkg/: CMakeLists.txt  package.xml
src_laptop/my_lidar_pkg/urdf/: lidar.urdf.xacro
src_laptop/my_robot_pkg/: CMakeLists.txt  package.xml
src_laptop/my_robot_pkg/launch/: launch_robot_navigation.launch
src_laptop/my_robot_pkg/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_real.yaml
src_laptop/new_robot/config/: control.yaml
src_laptop/new_robot/launch/: robot_launch.launch
src_laptop/new_robot/rviz/: robot.rviz
src_laptop/new_robot/urdf/: robot.xacro  rplidar.xacro
src_laptop/new_robot/worlds/: robot_world.world
src_laptop/robot_with_gmapping/: CMakeLists.txt  package.xml
src_laptop/robot_with_gmapping/launch/: gmapping_with_my_robot.launch
src_laptop/warehouse_simulation_toolkit/: README.md  package.xml
src_pi/launch_pi_nano_bot/: CMakeLists.txt  package.xml
src_pi/launch_pi_nano_bot/config/: ekf.yaml
src_pi/launch_pi_nano_bot/launch/: pi_launch.launch  pi_nano_bot.launch
src_pi/launch_pi_nano_bot/maps/: room.pgm  room.yaml
src_pi/localization_data_pub/: CMakeLists.txt  package.xml
src_pi/navstack_pub/: package.xml
src_pi/new_robot/: CMakeLists.txt  package.xml
src_pi/rf2o_laser_odometry/: package.xml
src_pi/rf2o_laser_odometry/include/rf2o_laser_odometry/: CLaserOdometry2D.h
(+8 files in other folders)
